typed-test/streamdocs.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamdocs
spec:
  ports:
    - protocol: TCP
      port: 8080
  selector:
    app: streamdocs
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: streamdocs
spec:
  serviceName: streamdocs
  replicas: 1
  selector:
    matchLabels:
      app: streamdocs
  template:
    metadata:
      labels:
        app: streamdocs
    spec:
      containers:
        - name: streamdocs
          image: 730490031339.dkr.ecr.ap-northeast-2.amazonaws.com/streamdocs:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: storage
              mountPath: /ePapyrus/sd
              subPath: ./streamdocs
        - name: mariadb
          image: mariadb:latest
          args:
            - --character-set-server=utf8
            - --collation-server=utf8_general_ci
          volumeMounts:
            - name: storage
              mountPath: /var/lib/mysql
              subPath: ./mariadb
  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ebs
        resources:
          requests:
            storage: 40Gi
