typed-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: typed-test
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/app-root: /streamdocs/view/sd
    nginx.ingress.kubernetes.io/proxy-body-size: 100M
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - typed.test.epapyrus.com
    secretName: typed.test.epapyrus.com-tls
  rules:
    - host: typed.test.epapyrus.com
      http:
        paths:
          - path: /streamdocs
            pathType: Prefix
            backend:
              service:
                name: streamdocs
                port:
                  number: 8080
